objects/sf4twitter__Twitter_Public_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>sf4twitter__Article_URL_Site__c</fullName>
        <label>Article URL Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Bitly_Key__c</fullName>
        <label>Bitly Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Bitly_Username__c</fullName>
        <label>Bitly Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Facebook_Icon_Url__c</fullName>
        <label>Facebook Icon Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Comments_Per_Page__c</fullName>
        <defaultValue>1000</defaultValue>
        <label>Comments Per Page</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Posts_Per_Comment_Page__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Posts Per Comment Page</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Fcbk_Posts_Per_Page__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Posts Per Page</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Application__c</fullName>
        <label>Klout Application</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Key__c</fullName>
        <label>Klout Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Klout_Score_logo__c</fullName>
        <label>Klout Score Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Like_Me_Icon_Url__c</fullName>
        <label>Like Me Icon Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Server_Name__c</fullName>
        <label>Server Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Icon_Url__c</fullName>
        <label>Twitter Icon Url</label>
        <type>Url</type>
    </fields>
    <label>Twitter Public Configuration</label>
</CustomObject>